tests/ui/macros/dollar-crate-in-matcher.stderr
error: missing fragment specifier
  --> $DIR/dollar-crate-in-matcher.rs:42:25
   |
LL |               ($dol $crate) => {}
   |  _________________________^
...  |
LL | | dollar_crate_metavariable!($);
   | |_--------------------------^--
   |   |
   |   in this macro invocation
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
   = note: this error originates in the macro `dollar_crate_metavariable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try adding a specifier here
   |
LL | dollar_crate_metavariable!(:spec$);
   |                            +++++

error: usage of `$crate` in matcher
  --> $DIR/dollar-crate-in-matcher.rs:4:7
   |
LL |     ($crate) => {};
   |       ^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #155123 <https://github.com/rust-lang/rust/issues/155123>
note: the lint level is defined here
  --> $DIR/dollar-crate-in-matcher.rs:1:9
   |
LL | #![deny(dollar_crate_in_matcher)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: usage of `$crate` in matcher
  --> $DIR/dollar-crate-in-matcher.rs:10:7
   |
LL |     ($crate:tt) => {};
   |       ^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #155123 <https://github.com/rust-lang/rust/issues/155123>

error: usage of `$crate` in matcher
  --> $DIR/dollar-crate-in-matcher.rs:23:12
   |
LL | indirect!($crate);
   |            ^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #155123 <https://github.com/rust-lang/rust/issues/155123>

error: usage of `$crate` in matcher
  --> $DIR/dollar-crate-in-matcher.rs:35:36
   |
LL | indirect_with_fragment_specifier!($crate);
   |                                    ^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #155123 <https://github.com/rust-lang/rust/issues/155123>

error: usage of `$crate` in matcher
  --> $DIR/dollar-crate-in-matcher.rs:42:19
   |
LL |             ($dol $crate) => {}
   |                   ^^^^^^
...
LL | dollar_crate_metavariable!($);
   | ----------------------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #155123 <https://github.com/rust-lang/rust/issues/155123>
   = note: this error originates in the macro `dollar_crate_metavariable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: usage of `$crate` in matcher
  --> $DIR/dollar-crate-in-matcher.rs:55:19
   |
LL |             ($dol $crate : tt) => {}
   |                   ^^^^^^
...
LL | dollar_crate_metavariable_with_fragment_specifier!($);
   | ----------------------------------------------------- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #155123 <https://github.com/rust-lang/rust/issues/155123>
   = note: this error originates in the macro `dollar_crate_metavariable_with_fragment_specifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

